fix examples